--- a/Exerc_Fixação_Funções.ipynb
+++ b/Exerc_Fixação_Funções.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONzbZ+ZwcMGKe4MdwwX4uq",
+      "authorship_tag": "ABX9TyPSt+HQOkvOdisXYQUDct8z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,13 +168,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "metadata": {
         "id": "pwPQ3_3hVvfX",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "98bca1b1-57f7-4e51-b4bb-a4fde752e883"
+        "outputId": "b0438b62-7229-4498-ae59-a9761dd40258"
       },
       "outputs": [
         {
@@ -183,7 +183,7 @@
           "text": [
             "Insert any phrase: Pedro Gabriel Pito Lopes\n",
             "\n",
-            "vowels = 9 and consonants = 15\n"
+            "total number of letters: 24 and vowels = 9 and consonants = 15\n"
           ]
         }
       ],
@@ -200,7 +200,7 @@
         "    else:\n",
         "      c +=1\n",
         "\n",
-        "  print(f'\\nvowels = {v} and consonants = {c}')\n",
+        "  print(f'\\ntotal number of letters: {v + c} and vowels = {v} and consonants = {c}')\n",
         "\n",
         "words(input('Insert any phrase: '))"
       ]
