--- a/Tarefa_1_Estrutura_de_Dados.ipynb
+++ b/Tarefa_1_Estrutura_de_Dados.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFmYEb9JSQNF3tZlWfj7o7",
+      "authorship_tag": "ABX9TyMjVvWmepH+QfMszDOLrN11",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "- Adolescente (14-17)\n",
         "- Adulto (>18)\n",
         "\n",
-        "Obd: Se o usuário digitar um número negativo, ou maior que 150, mostre uma mensagem informando que a idade é inválida."
+        "Obs: Se o usuário digitar um número negativo, ou maior que 150, mostre uma mensagem informando que a idade é inválida."
       ],
       "metadata": {
         "id": "IHz4T-Gw66zU"
@@ -195,6 +195,253 @@
             "3 * 8 = 24\n",
             "3 * 9 = 27\n",
             "3 * 10 = 30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###TUPLAS\n",
+        "\n",
+        "1) Crie uma tupla de filmes. A tupla deve conter o título do filme, o nome do diretor, o ano de lançamento do filme e o orçamento do filme.\n",
+        "\n",
+        "2) Use a função input() para coletar informações sobre outros filmes. Você precisa de um título, nome do diretor, ano de lançamento e orçamento. Crie uma nova tupla a partir dos valores que você reuniu usando a entrada.\n",
+        "- Imprima todos os filmes das duas tuplas.\n",
+        "\n",
+        "3) Crie um programa que tenha uma tupla totalmente preenchida com uma contagem por extenso, de zero até vinte. ('zero', 'um', 'dois', ...)\n",
+        "- Seu programa deverá ler um número pelo teclado (entre 0 e 20) e mostra-lo por extenso.\n",
+        "- Números fora desse range deverão exibir uma mensagem e solicitar o valor novamente.\n",
+        "- Programa roda continuamente até que o usuário queira parar."
+      ],
+      "metadata": {
+        "id": "-wlMfMBytJxC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "filme = ('Piratas do Caribe', 'Pedro Gabriel', '2023', 'R$1.000')"
+      ],
+      "metadata": {
+        "id": "nr1irSEXt6pv"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "listaTupla = []\n",
+        "\n",
+        "def inputsPrint():\n",
+        "  titulo = input('\\nDigite título do filme: ')\n",
+        "  diretor = input('Digite o nome do diretor do filme: ')\n",
+        "  ano = input('Digite o ano do filme: ')\n",
+        "  orcamento = input('Digite o orçamento do filme: ')\n",
+        "  listaTupla.append((titulo, diretor, ano, orcamento))\n",
+        "  print(f'Filme tupla 1: {filme} \\nFilmes adicionados: {listaTupla}')\n",
+        "\n",
+        "while True:\n",
+        "  cont = input('\\nDeseja add um filme (y) ou parar (n)? ')\n",
+        "  if cont == 'n':\n",
+        "    print(' - FIM - ')\n",
+        "    break\n",
+        "  else:\n",
+        "    inputsPrint()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IdVf2U9xt3QI",
+        "outputId": "a80ec009-ebab-44be-8028-3367bbc7ac69"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Deseja add um filme (y) ou parar (n)? y\n",
+            "\n",
+            "Digite título do filme: Jason Bourne\n",
+            "Digite o nome do diretor do filme: jessica oliveira\n",
+            "Digite o ano do filme: 2018\n",
+            "Digite o orçamento do filme: 92834\n",
+            "Filme tupla 1: ('Piratas do Caribe', 'Pedro Gabriel', '2023', 'R$1.000') \n",
+            "Filmes adicionados: [('Jason Bourne', 'jessica oliveira', '2018', '92834')]\n",
+            "\n",
+            "Deseja add um filme (y) ou parar (n)? y\n",
+            "\n",
+            "Digite título do filme: Masha e o Urso\n",
+            "Digite o nome do diretor do filme: Urso\n",
+            "Digite o ano do filme: 2012\n",
+            "Digite o orçamento do filme: 29384\n",
+            "Filme tupla 1: ('Piratas do Caribe', 'Pedro Gabriel', '2023', 'R$1.000') \n",
+            "Filmes adicionados: [('Jason Bourne', 'jessica oliveira', '2018', '92834'), ('Masha e o Urso', 'Urso', '2012', '29384')]\n",
+            "\n",
+            "Deseja add um filme (y) ou parar (n)? y\n",
+            "\n",
+            "Digite título do filme: Carros\n",
+            "Digite o nome do diretor do filme: Fusca\n",
+            "Digite o ano do filme: 2019\n",
+            "Digite o orçamento do filme: 1923\n",
+            "Filme tupla 1: ('Piratas do Caribe', 'Pedro Gabriel', '2023', 'R$1.000') \n",
+            "Filmes adicionados: [('Jason Bourne', 'jessica oliveira', '2018', '92834'), ('Masha e o Urso', 'Urso', '2012', '29384'), ('Carros', 'Fusca', '2019', '1923')]\n",
+            "\n",
+            "Deseja add um filme (y) ou parar (n)? n\n",
+            " - FIM - \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros_por_extenso = (\n",
+        "    \"zero\", \"um\", \"dois\", \"três\", \"quatro\", \"cinco\", \"seis\", \"sete\", \"oito\", \"nove\", \"dez\", \"onze\", \"doze\", \"treze\",\n",
+        "    \"catorze\", \"quinze\", \"dezesseis\", \"dezessete\", \"dezoito\", \"dezenove\", \"vinte\"\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "m6fKd7HhBOvS"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "while True:\n",
+        "  numero = input('Digite um número de 0 a 20 (s p/a sair): ')\n",
+        "\n",
+        "  if (numero == 's'):\n",
+        "    print('- FIM -')\n",
+        "    break\n",
+        "  else:\n",
+        "    try:\n",
+        "      numero = int(numero)\n",
+        "      if ((numero < 0) or (numero > 20)):\n",
+        "        print('Valor inválido!')\n",
+        "        continue\n",
+        "      else:\n",
+        "        print(f'Número: {numeros_por_extenso[numero]}')\n",
+        "    except ValueError:\n",
+        "      print('Valor inválido!')\n",
+        "      continue"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U1G2J9DLBdmA",
+        "outputId": "3a96cf8c-ee4b-4f30-d985-d2e2cf47fa21"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número de 0 a 20 (s p/a sair): 22\n",
+            "Valor inválido!\n",
+            "Digite um número de 0 a 20 (s p/a sair): 1\n",
+            "Número: um\n",
+            "Digite um número de 0 a 20 (s p/a sair): 2\n",
+            "Número: dois\n",
+            "Digite um número de 0 a 20 (s p/a sair): 3\n",
+            "Número: três\n",
+            "Digite um número de 0 a 20 (s p/a sair): 4\n",
+            "Número: quatro\n",
+            "Digite um número de 0 a 20 (s p/a sair): 5\n",
+            "Número: cinco\n",
+            "Digite um número de 0 a 20 (s p/a sair): s\n",
+            "- FIM -\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# install library num2words\n",
+        "!pip install num2words"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5TbKp_Qkp_U7",
+        "outputId": "3a9e9a53-9f04-4514-f3b2-1533d21fa3f5"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: num2words in /usr/local/lib/python3.10/dist-packages (0.5.12)\n",
+            "Requirement already satisfied: docopt>=0.6.2 in /usr/local/lib/python3.10/dist-packages (from num2words) (0.6.2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from num2words import num2words\n",
+        "\n",
+        "while True:\n",
+        "  numero = input('Digite um número de 0 a 20 (s p/a sair): ')\n",
+        "\n",
+        "  if (numero == 's'):\n",
+        "    print('- FIM -')\n",
+        "    break\n",
+        "  else:\n",
+        "    try:\n",
+        "      numero = int(numero)\n",
+        "      if ((numero < 0) or (numero > 20)):\n",
+        "        continue\n",
+        "      else:\n",
+        "        num_ptbr = num2words(numero, lang='pt-br')\n",
+        "        print(f'Número: {num_ptbr}')\n",
+        "    except ValueError:\n",
+        "      print('Valor inválido!')\n",
+        "      continue\n",
+        "\n",
+        "# ex. Para ordinais\n",
+        "#num_ptbr_ord = num2words(numero, lang='pt-br', to='ordinal')\n",
+        "#print(f'Número (ordinal): {num_ptbr_ord}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TyjWh89S8eln",
+        "outputId": "7e69c5e7-0374-49fd-9155-247c53b96009"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número de 0 a 20 (s p/a sair): 20\n",
+            "Número: vinte\n",
+            "Digite um número de 0 a 20 (s p/a sair): 19\n",
+            "Número: dezanove\n",
+            "Digite um número de 0 a 20 (s p/a sair): 2\n",
+            "Número: dois\n",
+            "Digite um número de 0 a 20 (s p/a sair): 3\n",
+            "Número: três\n",
+            "Digite um número de 0 a 20 (s p/a sair): 4\n",
+            "Número: quatro\n",
+            "Digite um número de 0 a 20 (s p/a sair): 5\n",
+            "Número: cinco\n",
+            "Digite um número de 0 a 20 (s p/a sair): s\n",
+            "- FIM -\n"
           ]
         }
       ]
